# dojo

./: .gitignore  README.md  a.rs  b - コピー.rs  metric.txt
.obsidian/: app.json  graph.json  workspace.json
docs/: LaTeX.md  Manage_Login.md  git.md  nc.md  progress.md
docs/cs/: Computer Science; CS.md  DAG.md
docs/kindle/: Thomas、-Hunt、村上雅章-達人プログラマー ―熟達に向けたあなたの旅― 第2版.md  standards-株こそが最強の投資である１億円稼ぐテクニック 新書版.md  イオ-農業新時代　ネクストファーマーズの挑戦.md  メンタリストDaiGo-自分を操る超集中力.md  会社四季報編集部-得する株をさがせ！　会社四季報公式ガイドブック.md  安衛-ピーター・リンチの株で勝つ［新版］―――アマの知恵でプロを出し抜け.md  志生-Clean Code　アジャイルソフトウェア達人の技.md  春彦-超訳ニーチェの言葉.md  本田進一郎-有機農業と未来.md  武志-株を買うなら最低限知っておきたい ファンダメンタル投資の教科書　改訂版.md  泰之-農業で稼ぐ！ 経済学.md  片山晃、小松原周-【旧版】勝つ投資　負けない投資.md  生形大-お金をふやす８つの習慣―――外資系金融マンが教える本当のお金の知識.md  航平、επιστημη（エピステーメー）-独習C++ 新版.md  野中-世界の大富豪2000人は知っている! 4つの自由で「成幸」を手にする方法 impress QuickBooks.md  高田晃一-２万２０００人超を導いた就活コンサルタントが教える これだけ！内定.md
playground/github/copilot/sdk/: README.md  main.py  pyproject.toml
playground/python/labs/learning_openpyxl/: README.md  pyproject.toml
playground/python/labs/learning_openpyxl/src/app/: __init__.py  grade_report.py  inventory_reader.py  workbook_builder.py
playground/python/labs/learning_openpyxl/tests/: conftest.py  test_grade_report.py  test_inventory_reader.py  test_workbook_builder.py
playground/python/labs/testing_pytest/: README.md  pyproject.toml
playground/python/labs/testing_pytest/src/app/: __init__.py  calculator.py  user_service.py  weekend.py
playground/python/labs/testing_pytest/tests/: conftest.py  test_calculator.py  test_user_service.py  test_weekend.py
(+875 files in other folders)
