[project]
name = "sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "github-copilot-sdk",
]

[tool.uv.sources]
github-copilot-sdk = { git = "https://github.com/github/copilot-sdk.git", subdirectory = "python", rev = "main" }
