[project]
name = "lab-pytest"
version = "0.1.0"
description = "Pytest learning project for understanding basic testing patterns and testable design."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"